BWT-190: fix css spacing in footer menu links

--- a/src/staging/src/styles/footer.scss
+++ b/src/staging/src/styles/footer.scss
@@ -75,7 +75,7 @@
     font-size: 1.05rem;
 
     .footer-menu-divider {
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       margin-bottom: 5px;
       height: 1px;
       background-color: $colorGoldPrimary;
